RESOLVED FIXED256860
[iOS] Several API tests fail when run against an iPhone 12 simulator
https://bugs.webkit.org/show_bug.cgi?id=256860
Summary [iOS] Several API tests fail when run against an iPhone 12 simulator
Wenson Hsieh
Reported 2023-05-16 14:10:15 PDT
Attachments
Wenson Hsieh
Comment 1 2023-05-16 15:17:02 PDT
EWS
Comment 2 2023-05-17 06:36:47 PDT
Committed 264150@main (90f6849617f0): <https://commits.webkit.org/264150@main> Reviewed commits have been landed. Closing PR #13939 and removing active labels.
Robert Jenner
Comment 3 2023-05-23 15:53:38 PDT
*** Bug 256806 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.